--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,4 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".CartActivity">
 
+    <Button
+        android:id="@+id/buttonBack"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cartButton"
+        android:textColor="@color/blue_pastel" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
