--- a/app/src/main/res/layout/recycler_product.xml
+++ b/app/src/main/res/layout/recycler_product.xml
@@ -4,43 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemGtLayout"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="85dp"
     android:layout_margin="10dp"
-    android:layout_marginLeft="10dp"
+    android:background="@color/off_white"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imgProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_width="262dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvGtItemProductName"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="10dp"
-            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="67dp"
+            android:gravity="center_horizontal|center_vertical"
             android:text="@string/productName"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvGtItemProductPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="12sp" />
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgCart"
-        android:layout_width="45dp"
+        android:layout_width="38dp"
         android:layout_height="42dp"
         android:layout_gravity="center_horizontal|center_vertical"
         android:layout_weight="1"
