implemented coupons and worker, minor fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,17 @@
         android:id="@+id/searchProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:clickable="true"
+        android:cursorVisible="false"
         android:ems="10"
-        android:hint="@string/search"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:longClickable="false"
-        android:clickable="true"
+        android:hint="@string/search"
         android:inputType="none"
-        android:cursorVisible="false"
+        android:longClickable="false"
         android:paddingStart="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/rose_soft" />
