--- a/app/src/main/res/layout/activity_profile_update.xml
+++ b/app/src/main/res/layout/activity_profile_update.xml
@@ -37,7 +37,7 @@
             android:padding="6dp"
             app:tint="@color/white"
             android:elevation="4dp"
-            android:contentDescription="Change Photo"
+            android:contentDescription="@string/changePhoto"
             app:layout_constraintBottom_toBottomOf="@id/imgProfileUpdate"
             app:layout_constraintEnd_toEndOf="@id/imgProfileUpdate" />
 
@@ -49,7 +49,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:hint="Username"
+            android:hint="@string/un"
             app:boxStrokeColor="@color/blue_pastel"
             app:hintTextColor="@color/rose_soft"
             app:layout_constraintTop_toBottomOf="@id/imgProfileUpdate"
@@ -73,7 +73,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:hint="First Name"
+            android:hint="@string/fn"
             app:boxStrokeColor="@color/blue_pastel"
             app:hintTextColor="@color/rose_soft"
             app:layout_constraintTop_toBottomOf="@id/tilUsername"
@@ -97,7 +97,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:hint="Last Name"
+            android:hint="@string/ln"
             app:boxStrokeColor="@color/blue_pastel"
             app:hintTextColor="@color/rose_soft"
             app:layout_constraintTop_toBottomOf="@id/tilFirstName"
@@ -121,7 +121,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="Update Profıle"
+            android:text="@string/updateProfileBtn"
             android:padding="12dp"
             android:textColor="@color/blue_pastel"
             app:layout_constraintTop_toBottomOf="@id/tilLastName"
@@ -136,7 +136,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="Cancel"
+            android:text="@string/updateCancelBtn"
             android:textColor="@color/rose_soft"
             app:layout_constraintTop_toBottomOf="@id/btnUpdate"
             app:layout_constraintStart_toStartOf="parent"
