--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -48,8 +48,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:rippleColor="@android:color/transparent"
             android:background="@null"
-            android:clickable="false"
-            android:focusable="false"/>
+            android:clickable="true"
+            android:focusable="true"/>
 
         <ImageView
             android:id="@+id/imgCart4"
