--- a/app/src/main/res/layout/recycler_cart.xml
+++ b/app/src/main/res/layout/recycler_cart.xml
@@ -10,12 +10,12 @@
 
     <ImageView
         android:id="@+id/imgProduct"
-        android:layout_width="85dp"
+        android:layout_width="71dp"
         android:layout_height="85dp"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <LinearLayout
-        android:layout_width="262dp"
+        android:layout_width="220dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -37,13 +37,21 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imgCart"
-        android:layout_width="38dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center_horizontal|center_vertical"
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|center_horizontal|center_vertical"
         android:layout_weight="1"
-        app:srcCompat="@drawable/shopping_cart" />
+        android:minHeight="48dp"
+        android:padding="4dp" />
+
+    <ImageView
+        android:id="@+id/btnRemove"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        app:srcCompat="@android:drawable/btn_dialog" />
 
 
 </LinearLayout>
