update price formatting, update strings.xml and adjust product detail layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Emirin muhtesem oyunu"
+        android:text="@string/btn_game"
         android:textColor="@color/rose_soft" />
     <View
         android:id="@+id/divider3"
